--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react": "^16.4.1",
     "react-apollo": "^2.1.5",
     "react-dom": "^16.4.1",
+    "react-file-picker": "0.0.6",
     "react-final-form": "^3.6.2",
     "react-gravatar": "^2.6.3",
     "react-redux": "^5.0.7",
