--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "graphql-playground-middleware-express": "^1.7.0",
     "jsonwebtoken": "^8.3.0",
     "pg": "^7.4.3",
+    "react-file-picker": "0.0.6",
     "stringstream": "0.0.6"
   },
   "devDependencies": {
