--- a/client/package.json
+++ b/client/package.json
@@ -35,7 +35,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
     "redux": "^4.0.0",
-    "redux-devtools-extension": "^2.13.5"
+    "redux-devtools-extension": "^2.13.5",
+    "tippy.js": "^4.3.4"
   },
   "devDependencies": {
     "prettier": "1.13.7"
