--- a/server/package.json
+++ b/server/package.json
@@ -31,7 +31,8 @@
     "jsonwebtoken": "^8.3.0",
     "pg": "^7.4.3",
     "react-file-picker": "0.0.6",
-    "stringstream": "0.0.6"
+    "stringstream": "0.0.6",
+    "tippy.js": "^4.3.4"
   },
   "devDependencies": {
     "jest-cli": "^23.6.0",
